airflowVK_DAG/logs/dag_id=dag_saver_v01/run_id=manual__2024-09-21T10:43:23.957140+00:00/task_id=insert_data/attempt=1.log
[2024-09-21T10:53:35.599+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: dag_saver_v01.insert_data manual__2024-09-21T10:43:23.957140+00:00 [queued]>
[2024-09-21T10:53:35.617+0000] {taskinstance.py:1087} INFO - Dependencies all met for <TaskInstance: dag_saver_v01.insert_data manual__2024-09-21T10:43:23.957140+00:00 [queued]>
[2024-09-21T10:53:35.618+0000] {taskinstance.py:1283} INFO - 
--------------------------------------------------------------------------------
[2024-09-21T10:53:35.620+0000] {taskinstance.py:1284} INFO - Starting attempt 1 of 2
[2024-09-21T10:53:35.621+0000] {taskinstance.py:1285} INFO - 
--------------------------------------------------------------------------------
[2024-09-21T10:53:35.641+0000] {taskinstance.py:1304} INFO - Executing <Task(PostgresOperator): insert_data> on 2024-09-21 10:43:23.957140+00:00
[2024-09-21T10:53:35.652+0000] {standard_task_runner.py:55} INFO - Started process 6619 to run task
[2024-09-21T10:53:35.655+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'dag_saver_v01', 'insert_data', 'manual__2024-09-21T10:43:23.957140+00:00', '--job-id', '37', '--raw', '--subdir', 'DAGS_FOLDER/dag_saver.py', '--cfg-path', '/tmp/tmpsixzzpzz']
[2024-09-21T10:53:35.658+0000] {standard_task_runner.py:83} INFO - Job 37: Subtask insert_data
[2024-09-21T10:53:35.711+0000] {task_command.py:389} INFO - Running <TaskInstance: dag_saver_v01.insert_data manual__2024-09-21T10:43:23.957140+00:00 [running]> on host 16da3808dee2
[2024-09-21T10:53:35.755+0000] {taskinstance.py:1513} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=<NAME>
AIRFLOW_CTX_DAG_ID=dag_saver_v01
AIRFLOW_CTX_TASK_ID=insert_data
AIRFLOW_CTX_EXECUTION_DATE=2024-09-21T10:43:23.957140+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2024-09-21T10:43:23.957140+00:00
[2024-09-21T10:53:35.756+0000] {sql.py:253} INFO - Executing: 
            insert into vk_group_posts (vk_group_link, vk_post_id, vk_post_text, vk_post_comments) 
                values (
                    'ti.xcom_pull(task_ids="fetch_vk_data", key="")'
                )
        
        
[2024-09-21T10:53:35.764+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-09-21T10:53:35.893+0000] {base.py:73} INFO - Using connection ID 'postgres_default' for task execution.
[2024-09-21T10:53:35.906+0000] {sql.py:364} INFO - Running statement: 
            insert into vk_group_posts (vk_group_link, vk_post_id, vk_post_text, vk_post_comments) 
                values (
                    'ti.xcom_pull(task_ids="fetch_vk_data", key="")'
                )
        
        , parameters: None
[2024-09-21T10:53:35.916+0000] {taskinstance.py:1772} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 261, in execute
    return_last=self.return_last,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 338, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 369, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
LINE 2: ...       insert into vk_group_posts (vk_group_link, vk_post_id...
                                                             ^

[2024-09-21T10:53:35.933+0000] {taskinstance.py:1327} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_saver_v01, task_id=insert_data, execution_date=20240921T104323, start_date=20240921T105335, end_date=20240921T105335
[2024-09-21T10:53:35.956+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 37 for task insert_data (INSERT has more target columns than expressions
LINE 2: ...       insert into vk_group_posts (vk_group_link, vk_post_id...
                                                             ^
; 6619)
[2024-09-21T10:53:36.007+0000] {local_task_job.py:159} INFO - Task exited with return code 1
[2024-09-21T10:53:36.030+0000] {taskinstance.py:2582} INFO - 0 downstream tasks scheduled from follow-on schedule check
